--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
         <div class="bg-image"></div>
         <div id="justfun" class="logo">
-            <img src="./images/logo_pink.png" alt="">
+            <img src="./logo_pink.png" alt="">
        
         </div>
         <i id="open-nav" class="fas fa-bars"></i>
@@ -329,7 +329,7 @@
                 </div>
                 <div class="containerx">
                         <div class="card">
-                          <img src="./images/mockup-1.jpg">
+                          <img src="./mockup-1.jpg">
                           <h4>fullplate.in</h4>
                           <p>
                               Its a cooking blog that I made with html, css, JavaScript, and backend of the 
@@ -338,13 +338,13 @@
                           <a href="#">visit site</a>
                         </div>
                         <div class="card">
-                          <img src="./images/mockup-1.jpg">
+                          <img src="./mockup-1.jpg">
                           <h4>bksite.tech</h4>
                        <p>You are on this site only. This I made using html, css, JavaScript and bootstrap.</p>   
                           <a href="#">visit site</a>
                         </div>
                         <div class="card">
-                          <img src="./images/mockup-1.jpg">
+                          <img src="./mockup-1.jpg">
                           <h4>thewebkeepers.com</h4>
                            <p>This is a business website built by me in wordpress with custom design and hosten on AWS.</p>
                           <a href="#">visit site</a>
@@ -361,7 +361,7 @@
                 
                 <div class="wrapper">
                   <div class="company-info">
-                    <h1 class="brand"> <img width="100%" src="./images/logo_blue.png" alt=""></h1>
+                    <h1 class="brand"> <img width="100%" src="./logo_blue.png" alt=""></h1>
                     <h3>Full Stack Web Developer</h3>
                     <ul>
                       <li><i class="fa fa-road"></i> B K Karan</li>
